--- a/dream-server.conf
+++ b/dream-server.conf
@@ -4,3 +4,4 @@ admin_passwd = dream2022
 http_port = 8069
 logfile = /var/log/dream/dream-server.log
 addons_path=/opt/dream/dream-server/addons, /opt/dream/custom/addonsCE17
+# limit_time_real = 0
